# pico_calc

./: .clangd  CMakeLists.txt  communicate.sh  compile_commands.json  flash.sh  font8x8_basic.h  main.c  notes.txt  pico_font.h  st7565.c  st7565.h  tnt_rules.md
tnt/: Makefile  compile_commands.json  main  main.c
